--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "elasticlunr": "^0.9.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-facebook-login": "^3.7.2",
