--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "offer-search",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://paulodiovani.github.io/offer-search",
   "dependencies": {
     "elasticlunr": "^0.9.5",
     "react": "^16.2.0",
@@ -14,7 +15,9 @@
     "build": "react-scripts build",
     "lint": "eslint .",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "eslint": "^4.12.1",
