--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-facebook-login": "^3.7.2",
-    "react-scripts": "1.0.17"
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,6 +30,7 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-react": "^7.5.1",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "redux-logger": "^3.0.6"
   }
 }
